z-index fix for ubermenu

--- a/wp-content/themes/carrington-business/carrington-build/modules/featured-thumbs/css/featured-thumbs.css
+++ b/wp-content/themes/carrington-business/carrington-build/modules/featured-thumbs/css/featured-thumbs.css
@@ -21,7 +21,7 @@ display: none;
 }
 .featured-item-image {
   position:absolute;
-  z-index:2;
+  z-index:0;
   top:0;
   left:0;
   padding:0;margin:0;
